main menu created levels added
Game now contains 3 levels and main menu screen